feat: add activity create and list with ownership security